force-app/main/default/objects/Attendance__c/Attendance__c.object-meta.xml
<CustomObject>
    <label>Attendance</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Attendance By</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>