force-app/main/default/objects/Attendance__c/fields/Attendance_Self__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Self__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendance Self</label>
    <referenceTo>Attendance__c</referenceTo>
    <relationshipLabel>Attendances</relationshipLabel>
    <relationshipName>Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>