force-app/main/default/objects/Attendance__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <label>Employee Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attendances</relationshipLabel>
    <relationshipName>Attendances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>