force-app/main/default/objects/Attendance__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>