force-app/main/default/objects/Attendance__c/fields/Unique__c.field-meta.xml
<CustomField>
    <fullName>Unique__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unique</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>