force-app/main/default/objects/Attendance__c/validationRules/Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Date</fullName>
    <active>true</active>
    <errorConditionFormula>Date__c  &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Date should not be greater than current date.</errorMessage>
</ValidationRule>