force-app/main/default/objects/Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Employee_Name__c</columns>
    <columns>Date__c</columns>
    <columns>Remarks__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>